--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/noopkat/avrgirl-arduino",
   "dependencies": {
+    "@serialport/bindings-cpp": "10.7.0",
     "async": "^2.6.3",
     "awty": "^0.1.0",
     "browser-serialport": "git+https://github.com/noopkat/browser-serialport.git#c8628c41c11890d3058875994c15f83f2df8185b",
@@ -42,7 +43,7 @@
     "intel-hex": "^0.1.2",
     "minimist": "^1.2.5",
     "process": "^0.11.10",
-    "serialport": "^9.0.6",
+    "serialport": "^10.4.0",
     "stk500": "^2.0.3",
     "stk500-v2": "^1.0.4"
   },
